tests/semantic/invalid/30_e_child_before_parent.hulk
type Child( ) inherits Parent { }

type Parent() { }
